10/ALB-ingress.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: alb-ip
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: alb-ip
  name: alb-ip
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: alb-ip
  replicas: 3
  template:
    metadata:
      labels:
        app.kubernetes.io/name: alb-ip
    spec:
      containers:
      - image: 133129065110.dkr.ecr.ap-southeast-1.amazonaws.com/phpdemo:2
        imagePullPolicy: Always
        name: alb-ip
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: alb-ip
  name: alb-ip
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: alb-ip
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: alb-ip
  name: alb-ip
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: alb-ip
              port:
                number: 80
